Added easier methods for API
Added a config option to censor the full word and not leave the ends uncensored
Made it possible to use Chat Censor as a client side censor