@@ -3,6 +3,8 @@ package the_fireplace.chatcensor.logic;
 import net.minecraft.command.ICommandManager;
 import net.minecraft.command.ServerCommandManager;
 import net.minecraft.server.MinecraftServer;
+import the_fireplace.chatcensor.commands.CommandCensorPlayer;
+import the_fireplace.chatcensor.commands.CommandMute;
 import the_fireplace.chatcensor.commands.CommandToggleCensor;
 import the_fireplace.chatcensor.data.PlayerDataManager;
 import the_fireplace.chatcensor.util.CensorHelper;
@@ -12,6 +14,8 @@ public class ServerEventLogic {
         ICommandManager command = server.getCommandManager();
         ServerCommandManager manager = (ServerCommandManager) command;
         manager.registerCommand(new CommandToggleCensor());
+        manager.registerCommand(new CommandMute());
+        manager.registerCommand(new CommandCensorPlayer());
         CensorHelper.initCensoredMap();
     }
 
